--- a/sass/microbox.scss
+++ b/sass/microbox.scss
@@ -35,12 +35,13 @@ li {
 
 .microbox {
 
-	$offset: 50px;
+	$offset: 23px;
 
 	@include box-shadow(2px 2px 3px rgba(0, 0, 0, 0.2));
 	@include transition;
 	background: rgba(0,0,0,.7);
 	display: none;
+	max-height: 100%;
 	overflow: auto;
 	padding: 10px;
 	position: fixed;
@@ -57,6 +58,7 @@ li {
 		@include box-shadow(0 0 3px rgba(0, 0, 0, 0.2));
 		@include transition;
 		display: none;
+		height: 100%;
 		image-rendering: optimizeQuality;
 		-ms-interpolation-mode: bicubic;
 		margin: 0 auto;
@@ -73,6 +75,9 @@ li {
 
 			&.new { z-index: 1 }
 			&.old { z-index: 2 }
+		}
+		&.zoom {
+			height: auto;
 		}
 	}
 
