--- a/sass/microbox.scss
+++ b/sass/microbox.scss
@@ -29,26 +29,24 @@ li {
 		}
 		img {
 			display: block;
+			width: 200px;
 		}
 	}
 }
 
 .microbox {
 
+	$border: 10px;
 	$offset: 23px;
 
-	@include box-shadow(2px 2px 3px rgba(0, 0, 0, 0.2));
-	@include transition;
-	background: rgba(0,0,0,.7);
 	display: none;
-	max-height: 100%;
-	overflow: auto;
-	padding: 10px;
+	padding: $offset $offset ($offset + 2*$border);
 	position: fixed;
-		bottom: $offset;
-		left: $offset;
-		right: $offset;
-		top: $offset;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		top: 0;
+	text-align: center;
 
 	&.microbox-show {
 		display: block;
@@ -59,120 +57,24 @@ li {
 		@include transition;
 		cursor: zoom-in;
 		display: none;
-		height: 100%;
 		image-rendering: optimizeQuality;
 		-ms-interpolation-mode: bicubic;
-		margin: 0 auto;
+		margin-bottom: -3px;
+		max-height: 100%;
 		max-width: 100%;
 
 		&.cur {
-			display: block;
-		}
-		&.abs {
-			display: block;
-			position: absolute;
-				left: 0;
-				top: 0;
-
-			&.new { z-index: 1 }
-			&.old { z-index: 2 }
+			display: inline-block;
 		}
 	}
 
 	.inner {
-		overflow: hidden;
-		position: relative;
-		width: 100%;
-	}
-
-	.microbox-pager {
-
-		$pager: #555;
-		$pager-hover: darken($pager, 5%);
-		$pager-active: darken($pager-hover, 8%);
-
-		@include border-radius;
 		@include box-shadow(2px 2px 3px rgba(0, 0, 0, 0.2));
 		@include transition;
-		border-collapse: collapse;
-		position: fixed;
-			bottom: 6px;
-			left: 50px;
-		z-index: 3;
-
-		td {
-			@include gradient($pager, darken($pager, 12%));
-			@include text-shadow(1px 1px 0 rgba(0,0,0,.2));
-			color: #ddd;
-			cursor: pointer;
-			height: 38px;
-			text-align: center;
-			vertical-align: middle;
-			width: 40px;
-
-			&:hover {
-				@include gradient($pager-hover, darken($pager-hover, 12%));
-				color: #fff;
-				text-decoration: underline;
-			}
-			&:active {
-				@include gradient($pager-active, darken($pager-hover, 12%));
-			}
-
-			&.cur,
-			&.cur:hover {
-				@include gradient(lighten($pager-active, 4%), darken($pager-active, 5%));
-				color: #eee;
-				font-size: 18px;
-				font-weight: bold;
-				text-decoration: none;
-			}
-
-			&:first-of-type {
-				@include border-radius(5px 0 0 5px);
-			}
-
-			&:last-of-type {
-				@include border-radius(0 5px 5px 0);
-			}
-
-			// opera 9.5+ only
-			x:-o-prefocus,
-			&.cur,
-			&.cur:hover {
-				padding: 8px 15px 7px;
-			}
-		}
-
-		.microbox-pager-label {
-			border-right: 1px solid rgba(0,0,0,.2);
-			color: #999;
-			padding: 0 15px;
-		}
-
-		.microbox-pager-label {
-			@include border-radius(5px 0 0 5px);
-			@include text-shadow(-1px -1px 0 rgba(0,0,0,.15));
-			background: rgba(0,0,0,.75);
-			color: #999;
-			font-size: 12px;
-			font-weight: bold;
-		}
-
+		border: $border solid rgba(0,0,0,.7);
+		display: inline-block;
+		max-height: 100%;
+		text-align: center;
 	}
-
-	.scroller {
-		@include box-shadow(0 0 2px rgba(0,0,0,.2));
-		background-color: rgba(0,0,0,.5);
-		cursor: default;
-		display: block;
-		height: 100px;
-		position: absolute;
-			left: 0;
-			top: 0;
-		width: 30px;
-
-		&:hover  { background-color: rgba(0,0,0,.6) }
-		&.active { background-color: rgba(0,0,0,.8) }
-	}
+	
 }
