--- a/sass/microbox.scss
+++ b/sass/microbox.scss
@@ -56,11 +56,19 @@ li {
 	}
 
 	figcaption {
+		@include opacity(0);
+		@include transition;
 		background: rgba(0,0,0,.5);
 		color: #ddd;
-		padding: 20px;
+		padding: 20px 0;
 		position: relative;
-			top: -55px;
+			top: 50px;
+		width: 100%;
+	}
+
+	.show-caption figcaption {
+		@include opacity(1);
+		top: -55px;
 	}
 
 	img {
