--- a/sass/microbox.scss
+++ b/sass/microbox.scss
@@ -43,7 +43,6 @@ li {
 	background: $shade;
 	cursor: pointer;
 	display: none;
-	padding: $offset $offset ($offset + 2*$border);
 	position: fixed;
 		bottom: 0;
 		left: 0;
@@ -107,10 +106,12 @@ li {
 	.inner {
 		@include box-shadow(2px 2px 3px rgba(0, 0, 0, 0.2));
 		@include transition;
-		//border: $border solid rgba(255,255,255,.2);
 		cursor: default;
 		display: inline-block;
 		max-height: 100%;
+		position: absolute;
+			left: 0;
+			top: 50%;
 		text-align: center;
 
 		&.has-caption {
