--- a/sass/microbox.scss
+++ b/sass/microbox.scss
@@ -53,31 +53,20 @@ li {
 		display: block;
 	}
 
-	&.show-caption {
-		figcaption {
-			@include opacity(1);
-			bottom: 0;
-		}
-		.microbox-caption-trigger {
-			bottom: 60px;
-		}
-	}
-
 	figure {
-		overflow: hidden;
+		//overflow: hidden;
 		position: relative;
 	}
 
 	figcaption {
-		@include opacity(0);
 		@include transition;
 		background: rgba(0,0,0,.5);
 		color: #ddd;
 		padding: 20px;
 		position: absolute; // show background
-			bottom: -150px;
 			left: 0;
 			right: 0;
+			top: 100%;
 	}
 
 	img {
@@ -98,7 +87,6 @@ li {
 
 	.inner {
 		@include box-shadow(2px 2px 3px rgba(0, 0, 0, 0.2));
-		@include transition;
 		cursor: default;
 		display: inline-block;
 		max-height: 100%;
@@ -127,8 +115,8 @@ li {
 		font-style: italic;
 		padding: 4px 20px;
 		position: absolute;
-			bottom: 10px;
 			right: 10px;
+			top: -58px;
 		z-index: 100;
 
 		&:hover {
