--- a/sass/microbox.scss
+++ b/sass/microbox.scss
@@ -49,7 +49,7 @@ li {
 		top: 0;
 	text-align: center;
 
-	&.microbox-show {
+	&.show-microbox {
 		display: block;
 	}
 
@@ -84,16 +84,12 @@ li {
 		@include box-shadow(2px 2px 3px rgba(0, 0, 0, 0.2));
 		cursor: default;
 		display: inline-block;
-		max-height: 100%;
 		position: absolute;
+			bottom: 0;
 			left: 0;
 			right: 0;
-			top: 50%;
+			top: 0;
 		text-align: center;
-
-		&.has-caption {
-			margin-bottom: 100px;
-		}
 	}
 
 	.microbox-caption-trigger {
