--- a/css/microbox-ie9.css
+++ b/css/microbox-ie9.css
@@ -1,4 +1,1 @@
-/* line 3, ../stylesheets-sass/ie9.scss */
-.microBox .pager a {
-  padding: 10px 15px 9px;
-}
+.microBox .pager a{padding:10px 15px 9px}
