--- a/sass/microbox.scss
+++ b/sass/microbox.scss
@@ -92,7 +92,7 @@ li {
 		text-align: center;
 	}
 
-	.microbox-caption-trigger {
+	.caption-trigger {
 		@include border-radius(30px);
 		@include box-shadow(inset 0 2px 2px 2px rgba(0,0,0,.2));
 		@include gradient( rgba(0,0,0,.2), rgba(0,0,0,.4) );
