--- a/sass/microbox.scss
+++ b/sass/microbox.scss
@@ -93,6 +93,13 @@ li {
 	}
 
 	.caption-trigger {
+		font-family: "Times New Roman";
+		font-style: italic;
+		right: 10px;
+		top: -58px;
+	}
+
+	.microbox-button {
 		@include border-radius(30px);
 		@include box-shadow(inset 0 2px 2px 2px rgba(0,0,0,.2));
 		@include gradient( rgba(0,0,0,.2), rgba(0,0,0,.4) );
@@ -101,13 +108,9 @@ li {
 		color: #ccc;
 		cursor: pointer;
 		display: block;
-		font-family: "Times New Roman";
 		font-size: 36px;
-		font-style: italic;
 		padding: 4px 20px;
 		position: absolute;
-			right: 10px;
-			top: -58px;
 		z-index: 100;
 
 		&:hover {
@@ -117,6 +120,19 @@ li {
 
 		&:active {
 			@include gradient( rgba(0,0,0,.3), rgba(0,0,0,.4) );
+		}
+
+		&.next,
+		&.prev {
+			top: 50%;
+		}
+
+		&.prev {
+			left: 10px;
+		}
+
+		&.next {
+			right: 10px;
 		}
 	}
 	
