--- a/stylus/microbox.styl
+++ b/stylus/microbox.styl
@@ -2,46 +2,15 @@
 
 @import "mixins"
 
-// reset
+// vars
 
-*
-	border 0
-	margin 0
-	padding 0
+$border = 0
+$shade = rgba(0,0,0,.8)
+$offset = 23px
 
-// styles
-
-body
-	background #aaa
-	font 14px Helvetica, Arial, sans-serif
-	padding 20px
-
-li
-	display inline
-	list-style none
-	margin 0 -3px 0 0
-
-	a
-		background #999
-		display inline-block
-		padding 10px
-
-		&:hover
-			background #888
-		
-		img
-			display block
-			width 200px
-		
-	
-
+// microbox
 
 .microbox
-
-	$border = 0
-	$shade = rgba(0,0,0,.8)
-	$offset = 23px
-
 	background $shade
 	display none
 	position fixed
