--- a/css/microbox.css
+++ b/css/microbox.css
@@ -69,7 +69,7 @@
   right: 10px;
   top: -58px;
 }
-.microbox .microbox-button {
+.microbox-button {
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   -ms-border-radius: 30px;
@@ -98,7 +98,7 @@
   transition: all 0.2s linear;
   z-index: 100;
 }
-.microbox .microbox-button:hover {
+.microbox-buttonhover {
   color: #ddd;
   background-image: -webkit-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.3));
   background-image: -moz-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.3));
@@ -106,20 +106,145 @@
   background-image: -o-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.3));
   background-image: linear-gradient(-180deg, rgba(0,0,0,0.2), rgba(0,0,0,0.3));
 }
-.microbox .microbox-button:active {
+.microbox-buttonactive {
   background-image: -webkit-linear-gradient(-90deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
   background-image: -moz-linear-gradient(-90deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
   background-image: -ms-linear-gradient(-90deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
   background-image: -o-linear-gradient(-90deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
   background-image: linear-gradient(-180deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
 }
-.microbox .microbox-button.next,
-.microbox .microbox-button.prev {
+.microbox-button.next,
+.microbox-button.prev {
   top: 50%;
 }
-.microbox .microbox-button.prev {
+.microbox-button.prev {
   left: 10px;
 }
-.microbox .microbox-button.next {
+.microbox-button.next {
   right: 10px;
+}
+.microbox-pager {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
+  -moz-box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
+  -ms-box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
+  -o-box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
+  box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
+  border-collapse: collapse;
+  position: fixed;
+  bottom: 6px;
+  left: 50px;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  z-index: 3;
+}
+.microbox-pager td {
+  background-image: -webkit-linear-gradient(-90deg, #555, #4b4b4b);
+  background-image: -moz-linear-gradient(-90deg, #555, #4b4b4b);
+  background-image: -ms-linear-gradient(-90deg, #555, #4b4b4b);
+  background-image: -o-linear-gradient(-90deg, #555, #4b4b4b);
+  background-image: linear-gradient(-180deg, #555, #4b4b4b);
+  -webkit-text-shadow: 1px 1px 0 rgba(0,0,0,0.2);
+  -moz-text-shadow: 1px 1px 0 rgba(0,0,0,0.2);
+  -ms-text-shadow: 1px 1px 0 rgba(0,0,0,0.2);
+  -o-text-shadow: 1px 1px 0 rgba(0,0,0,0.2);
+  text-shadow: 1px 1px 0 rgba(0,0,0,0.2);
+  color: #ddd;
+  cursor: pointer;
+  height: 38px;
+  text-align: center;
+  vertical-align: middle;
+  width: 40px;
+}
+.microbox-pager td:hover {
+  color: #fff;
+  background-image: -webkit-linear-gradient(-90deg, #515151, #474747);
+  background-image: -moz-linear-gradient(-90deg, #515151, #474747);
+  background-image: -ms-linear-gradient(-90deg, #515151, #474747);
+  background-image: -o-linear-gradient(-90deg, #515151, #474747);
+  background-image: linear-gradient(-180deg, #515151, #474747);
+  text-decoration: underline;
+}
+.microbox-pager td:active {
+  background-image: -webkit-linear-gradient(-90deg, #4b4b4b, #474747);
+  background-image: -moz-linear-gradient(-90deg, #4b4b4b, #474747);
+  background-image: -ms-linear-gradient(-90deg, #4b4b4b, #474747);
+  background-image: -o-linear-gradient(-90deg, #4b4b4b, #474747);
+  background-image: linear-gradient(-180deg, #4b4b4b, #474747);
+}
+.microbox-pager td.cur,
+.microbox-pager td.cur:hover {
+  color: #eee;
+  font-size: 18px;
+  font-weight: bold;
+  background-image: -webkit-linear-gradient(-90deg, #525252, #474747);
+  background-image: -moz-linear-gradient(-90deg, #525252, #474747);
+  background-image: -ms-linear-gradient(-90deg, #525252, #474747);
+  background-image: -o-linear-gradient(-90deg, #525252, #474747);
+  background-image: linear-gradient(-180deg, #525252, #474747);
+  text-decoration: none;
+}
+.microbox-pager td:first-of-type {
+  -webkit-border-radius: 5px 0 0 5px;
+  -moz-border-radius: 5px 0 0 5px;
+  -ms-border-radius: 5px 0 0 5px;
+  -o-border-radius: 5px 0 0 5px;
+  border-radius: 5px 0 0 5px;
+}
+.microbox-pager td:last-of-type {
+  include: border-radius 0 5px 5px 0;
+}
+.microbox-pager td x-o-prefocus,
+.microbox-pager td.cur,
+.microbox-pager td.cur:hover {
+  padding: 8px 15px 7px;
+}
+.microbox-pager .microbox-pager-label {
+  border-right: 1px solid rgba(0,0,0,0.2);
+  color: #999;
+  padding: 0 15px;
+}
+.microbox-pager .microbox-pager-label {
+  background: rgba(0,0,0,0.75);
+  -webkit-border-radius: 5px 0 0 5px;
+  -moz-border-radius: 5px 0 0 5px;
+  -ms-border-radius: 5px 0 0 5px;
+  -o-border-radius: 5px 0 0 5px;
+  border-radius: 5px 0 0 5px;
+  color: #999;
+  font-size: 12px;
+  font-weight: bold;
+  -webkit-text-shadow: -1px -1px 0 rgba(0,0,0,0.15);
+  -moz-text-shadow: -1px -1px 0 rgba(0,0,0,0.15);
+  -ms-text-shadow: -1px -1px 0 rgba(0,0,0,0.15);
+  -o-text-shadow: -1px -1px 0 rgba(0,0,0,0.15);
+  text-shadow: -1px -1px 0 rgba(0,0,0,0.15);
+}
+.scroller {
+  background-color: rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0 0 2px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0 0 2px rgba(0,0,0,0.2);
+  -ms-box-shadow: 0 0 2px rgba(0,0,0,0.2);
+  -o-box-shadow: 0 0 2px rgba(0,0,0,0.2);
+  box-shadow: 0 0 2px rgba(0,0,0,0.2);
+  cursor: default;
+  display: block;
+  height: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 30px;
+}
+.scroller:hover {
+  background-color: rgba(0,0,0,0.6);
+}
+.scroller.active {
+  background-color: rgba(0,0,0,0.8);
 }
