--- a/stylus/microbox.styl
+++ b/stylus/microbox.styl
@@ -7,6 +7,9 @@
 $border = 0
 $shade = rgba(0,0,0,.8)
 $offset = 23px
+$pager = #555
+$pager-hover = darken($pager, 5%)
+$pager-active = darken($pager-hover, 8%)
 
 // microbox
 
@@ -64,34 +67,117 @@ $offset = 23px
 		font-style italic
 		right 10px
 		top -58px
+
+// buttons
 	
-	.microbox-button
-		border-radius 30px
-		box-shadow inset 0 2px 2px 2px rgba(0,0,0,.2)
-		color #ccc
+.microbox-button
+	border-radius 30px
+	box-shadow inset 0 2px 2px 2px rgba(0,0,0,.2)
+	color #ccc
+	cursor pointer
+	display block
+	font-size 36px
+	gradient rgba(0,0,0,.2), rgba(0,0,0,.4)
+	noselect
+	padding 4px 20px
+	position absolute
+	transition all .2s linear
+	z-index 100
+
+	&hover
+		color #ddd
+		gradient rgba(0,0,0,.2), rgba(0,0,0,.3)
+	
+	&active
+		gradient rgba(0,0,0,.3), rgba(0,0,0,.4)
+
+	&.next
+	&.prev
+		top 50%
+
+	&.prev
+		left 10px
+
+	&.next
+		right 10px
+
+// pager
+
+.microbox-pager
+
+	border-radius 5px
+	box-shadow 2px 2px 3px rgba(0, 0, 0, 0.2)
+	border-collapse collapse
+	position fixed
+	bottom 6px
+	left 50px
+	transition all .2s linear
+	z-index 3
+
+	td
+		gradient $pager, darken($pager, 12%)
+		text-shadow 1px 1px 0 rgba(0,0,0,.2)
+		color #ddd
 		cursor pointer
-		display block
-		font-size 36px
-		gradient rgba(0,0,0,.2), rgba(0,0,0,.4)
-		noselect
-		padding 4px 20px
-		position absolute
-		transition all .2s linear
-		z-index 100
+		height 38px
+		text-align center
+		vertical-align middle
+		width 40px
 
 		&:hover
-			color #ddd
-			gradient rgba(0,0,0,.2), rgba(0,0,0,.3)
+			color #fff
+			gradient $pager-hover, darken($pager-hover, 12%)
+			text-decoration underline
 		
 		&:active
-			gradient rgba(0,0,0,.3), rgba(0,0,0,.4)
+			gradient $pager-active, darken($pager-hover, 12%)
 
-		&.next
-		&.prev
-			top 50%
+		&.cur
+		&.cur:hover
+			color #eee
+			font-size 18px
+			font-weight bold
+			gradient lighten($pager-active, 4%), darken($pager-active, 5%)
+			text-decoration none
 
-		&.prev
-			left 10px
+		&:first-of-type
+			border-radius 5px 0 0 5px
 
-		&.next
-			right 10px
+		&:last-of-type
+			@include border-radius 0 5px 5px 0
+
+		// opera 9.5+ only
+		x-o-prefocus
+		&.cur
+		&.cur:hover
+			padding 8px 15px 7px
+
+	.microbox-pager-label
+		border-right 1px solid rgba(0,0,0,.2)
+		color #999
+		padding 0 15px
+
+	.microbox-pager-label
+		background rgba(0,0,0,.75)
+		border-radius 5px 0 0 5px
+		color #999
+		font-size 12px
+		font-weight bold
+		text-shadow -1px -1px 0 rgba(0,0,0,.15)
+
+.scroller
+	background-color rgba(0,0,0,.5)
+	box-shadow 0 0 2px rgba(0,0,0,.2)
+	cursor default
+	display block
+	height 100px
+	position absolute
+	left 0
+	top 0
+	width 30px
+
+	&:hover
+		background-color rgba(0,0,0,.6)
+	
+	&.active
+		background-color rgba(0,0,0,.8)
