--- a/css/microbox.css
+++ b/css/microbox.css
@@ -55,13 +55,12 @@
   box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
   cursor: default;
   display: inline-block;
-  text-align: center;
-}
-.microbox .inner position absolute {
+  position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
   top: 0;
+  text-align: center;
 }
 .microbox .caption-trigger {
   font-family: "Times New Roman";
