--- a/stylus/mixins.styl
+++ b/stylus/mixins.styl
@@ -19,6 +19,9 @@ border-radius()
 box-shadow()
 	vendor('box-shadow', arguments)
 
+box-sizing()
+	vendor('box-sizing', arguments)
+
 opacity()
 	vendor('opacity', arguments)
 
@@ -30,6 +33,9 @@ transform()
 
 transition()
 	vendor('transition', arguments)
+
+transition-property()
+	vendor('transition-property', arguments)
 
 // custom
 
