--- a/css/microbox.css
+++ b/css/microbox.css
@@ -87,6 +87,11 @@
   -ms-box-shadow: inset 0 2px 2px 2px rgba(0,0,0,0.2);
   -o-box-shadow: inset 0 2px 2px 2px rgba(0,0,0,0.2);
   box-shadow: inset 0 2px 2px 2px rgba(0,0,0,0.2);
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
   color: #ccc;
   cursor: pointer;
   display: block;
@@ -100,11 +105,11 @@
   line-height: 46px;
   position: absolute;
   text-align: center;
-  -webkit-transition: all 0.2s linear;
-  -moz-transition: all 0.2s linear;
-  -ms-transition: all 0.2s linear;
-  -o-transition: all 0.2s linear;
-  transition: all 0.2s linear;
+  -webkit-transition: background 0.2s linear, color 0.2s linear;
+  -moz-transition: background 0.2s linear, color 0.2s linear;
+  -ms-transition: background 0.2s linear, color 0.2s linear;
+  -o-transition: background 0.2s linear, color 0.2s linear;
+  transition: background 0.2s linear, color 0.2s linear;
   width: 46px;
   z-index: 100;
 }
@@ -135,6 +140,11 @@
   list-style: none;
   margin-right: 2px;
   position: relative;
+}
+.microbox-pager li.active {
+  border: 2px solid rgba(255,255,255,0.8);
+  color: #fff;
+  cursor: default;
 }
 .microbox-pager .counts,
 .microbox-pager .counts:active,
