validate toggle index, paginate when next/prev are clicked

--- a/css/microbox.css
+++ b/css/microbox.css
@@ -160,7 +160,7 @@
   padding: 0 10px;
   width: auto;
 }
-.microbox-pager [microbox-trigger="prev"] {
+.microbox-pager [microbox-trigger-prev] {
   margin-left: 0;
   margin-right: -2px;
   -webkit-transform: rotate(180deg);
@@ -169,9 +169,12 @@
   -o-transform: rotate(180deg);
   transform: rotate(180deg);
 }
-[microbox-trigger].disabled,
-[microbox-trigger].disabled:active,
-[microbox-trigger].disabled:hover {
+[microbox-trigger-next].disabled,
+[microbox-trigger-prev].disabled,
+[microbox-trigger-next].disabled:active,
+[microbox-trigger-prev].disabled:active,
+[microbox-trigger-next].disabled:hover,
+[microbox-trigger-prev].disabled:hover {
   background: 0;
   -webkit-box-shadow: 0 0;
   -moz-box-shadow: 0 0;
@@ -182,9 +185,12 @@
   cursor: default;
   position: relative;
 }
-[microbox-trigger].disabled:after,
-[microbox-trigger].disabled:active:after,
-[microbox-trigger].disabled:hover:after {
+[microbox-trigger-next].disabled:after,
+[microbox-trigger-prev].disabled:after,
+[microbox-trigger-next].disabled:active:after,
+[microbox-trigger-prev].disabled:active:after,
+[microbox-trigger-next].disabled:hover:after,
+[microbox-trigger-prev].disabled:hover:after {
   border-bottom: 2px solid rgba(255,255,255,0.2);
   content: "";
   left: 10px;
