--- a/stylus/microbox.styl
+++ b/stylus/microbox.styl
@@ -131,12 +131,13 @@ $pager-active = darken($pager-hover, 8%)
 		padding 0 $button-margin
 		width auto
 
-	[microbox-trigger="prev"]
+	[microbox-trigger-prev]
 		margin-left 0
 		margin-right -2px
 		transform rotate(180deg)
 
-[microbox-trigger]
+[microbox-trigger-next]
+[microbox-trigger-prev]
 
 	&.disabled
 	&.disabled:active
