--- a/css/microbox.css
+++ b/css/microbox.css
@@ -25,6 +25,9 @@
   -o-transition: all 0.2s linear;
   transition: all 0.2s linear;
 }
+.microbox .caption.hide {
+  display: none;
+}
 .microbox .count {
   bottom: 10px;
   color: rgba(255,255,255,0.3);
@@ -133,6 +136,12 @@
 .microbox-pager {
   bottom: 10px;
   left: 10px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
   position: absolute;
 }
 .microbox-pager li {
