--- a/stylus/microbox.styl
+++ b/stylus/microbox.styl
@@ -37,6 +37,9 @@ $pager-active = darken($pager-hover, 8%)
 		top 100%
 		transition all .2s linear
 
+		&.hide
+			display none
+
 	.count
 		bottom $button-margin
 		color rgba(255,255,255,.3)
@@ -108,6 +111,7 @@ $pager-active = darken($pager-hover, 8%)
 .microbox-pager
 	bottom $button-margin
 	left $button-margin
+	noselect()
 	position absolute
 
 	li
