visually activate 'i' icon when caption is visible

--- a/stylus/microbox.styl
+++ b/stylus/microbox.styl
@@ -37,6 +37,9 @@ $pager-active = darken($pager-hover, 8%)
 		top 100%
 		transition all .2s linear
 
+		&.active [microbox-trigger-caption]
+			button-active()
+
 		&.hide
 			display none
 
@@ -72,16 +75,17 @@ $pager-active = darken($pager-hover, 8%)
 		top 0
 		text-align center
 
-	.caption-trigger
-		font-family "Times New Roman"
-		font-style italic
-		right $button-margin
-		top -58px
+[microbox-trigger-caption]
+	font-family "Times New Roman"
+	font-style italic
+	right $button-margin
+	top -58px
 
 // buttons
 	
 .microbox-button
 .microbox-pager li
+	noselect()
 	border-radius $button
 	box-shadow inset 0 2px 2px 2px rgba(0,0,0,.2)
 	box-sizing border-box
@@ -92,7 +96,6 @@ $pager-active = darken($pager-hover, 8%)
 	gradient rgba(0,0,0,.2), rgba(0,0,0,.4)
 	height $button
 	line-height $button
-	noselect
 	position absolute
 	text-align center
 	transition background .2s linear, color .2s linear
@@ -109,9 +112,9 @@ $pager-active = darken($pager-hover, 8%)
 // pager
 
 .microbox-pager
+	noselect()
 	bottom $button-margin
 	left $button-margin
-	noselect()
 	position absolute
 
 	li
@@ -121,9 +124,7 @@ $pager-active = darken($pager-hover, 8%)
 		position relative
 
 		&.active
-			border 2px solid rgba(255,255,255,.8)
-			color #fff
-			cursor default
+			button-active()
 
 	.counts
 		button-disabled()
