--- a/stylus/mixins.styl
+++ b/stylus/mixins.styl
@@ -39,7 +39,10 @@ transition-property()
 
 // custom
 
-button()
+button-active()
+	border 2px solid rgba(255,255,255,.8)
+	color #fff
+	cursor default
 
 button-disabled()
 
