--- a/css/microbox.css
+++ b/css/microbox.css
@@ -25,6 +25,11 @@
   -o-transition: all 0.2s linear;
   transition: all 0.2s linear;
 }
+.microbox .caption.active [microbox-trigger-caption] {
+  border: 2px solid rgba(255,255,255,0.8);
+  color: #fff;
+  cursor: default;
+}
 .microbox .caption.hide {
   display: none;
 }
@@ -72,7 +77,7 @@
   top: 0;
   text-align: center;
 }
-.microbox .caption-trigger {
+[microbox-trigger-caption] {
   font-family: "Times New Roman";
   font-style: italic;
   right: 10px;
@@ -80,6 +85,12 @@
 }
 .microbox-button,
 .microbox-pager li {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
   -webkit-border-radius: 46px;
   -moz-border-radius: 46px;
   -ms-border-radius: 46px;
@@ -134,14 +145,14 @@
   background-image: linear-gradient(-180deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
 }
 .microbox-pager {
-  bottom: 10px;
-  left: 10px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
   -webkit-touch-callout: none;
+  bottom: 10px;
+  left: 10px;
   position: absolute;
 }
 .microbox-pager li {
