--- a/css/microbox.css
+++ b/css/microbox.css
@@ -83,8 +83,7 @@
   right: 10px;
   top: -58px;
 }
-.microbox-button,
-.microbox-pager li {
+.microbox-button {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -127,8 +126,7 @@
   width: 46px;
   z-index: 100;
 }
-.microbox-button:hover,
-.microbox-pager li:hover {
+.microbox-button:hover {
   color: #eee;
   background-image: -webkit-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.3));
   background-image: -moz-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.3));
@@ -136,8 +134,7 @@
   background-image: -o-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.3));
   background-image: linear-gradient(-180deg, rgba(0,0,0,0.2), rgba(0,0,0,0.3));
 }
-.microbox-button:active,
-.microbox-pager li:active {
+.microbox-button:active {
   background-image: -webkit-linear-gradient(-90deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
   background-image: -moz-linear-gradient(-90deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
   background-image: -ms-linear-gradient(-90deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
@@ -154,12 +151,73 @@
   bottom: 10px;
   left: 10px;
   position: absolute;
+  -webkit-transition: bottom 0.2s linear;
+  -moz-transition: bottom 0.2s linear;
+  -ms-transition: bottom 0.2s linear;
+  -o-transition: bottom 0.2s linear;
+  transition: bottom 0.2s linear;
 }
 .microbox-pager li {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-border-radius: 46px;
+  -moz-border-radius: 46px;
+  -ms-border-radius: 46px;
+  -o-border-radius: 46px;
+  border-radius: 46px;
+  -webkit-box-shadow: inset 0 2px 2px 2px rgba(0,0,0,0.2);
+  -moz-box-shadow: inset 0 2px 2px 2px rgba(0,0,0,0.2);
+  -ms-box-shadow: inset 0 2px 2px 2px rgba(0,0,0,0.2);
+  -o-box-shadow: inset 0 2px 2px 2px rgba(0,0,0,0.2);
+  box-shadow: inset 0 2px 2px 2px rgba(0,0,0,0.2);
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #ccc;
+  cursor: pointer;
+  display: block;
+  font-size: 36px;
+  background-image: -webkit-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.4));
+  background-image: -moz-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.4));
+  background-image: -ms-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.4));
+  background-image: -o-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.4));
+  background-image: linear-gradient(-180deg, rgba(0,0,0,0.2), rgba(0,0,0,0.4));
+  height: 46px;
+  line-height: 46px;
+  position: absolute;
+  text-align: center;
+  -webkit-transition: background 0.2s linear, color 0.2s linear;
+  -moz-transition: background 0.2s linear, color 0.2s linear;
+  -ms-transition: background 0.2s linear, color 0.2s linear;
+  -o-transition: background 0.2s linear, color 0.2s linear;
+  transition: background 0.2s linear, color 0.2s linear;
+  width: 46px;
+  z-index: 100;
   display: inline-block;
   list-style: none;
   margin-right: 2px;
   position: relative;
+}
+.microbox-pager li:hover {
+  color: #eee;
+  background-image: -webkit-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.3));
+  background-image: -moz-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.3));
+  background-image: -ms-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.3));
+  background-image: -o-linear-gradient(-90deg, rgba(0,0,0,0.2), rgba(0,0,0,0.3));
+  background-image: linear-gradient(-180deg, rgba(0,0,0,0.2), rgba(0,0,0,0.3));
+}
+.microbox-pager li:active {
+  background-image: -webkit-linear-gradient(-90deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
+  background-image: -moz-linear-gradient(-90deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
+  background-image: -ms-linear-gradient(-90deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
+  background-image: -o-linear-gradient(-90deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
+  background-image: linear-gradient(-180deg, rgba(0,0,0,0.3), rgba(0,0,0,0.4));
 }
 .microbox-pager li.active {
   border: 2px solid rgba(255,255,255,0.8);
