--- a/stylus/microbox.styl
+++ b/stylus/microbox.styl
@@ -84,30 +84,7 @@ $pager-active = darken($pager-hover, 8%)
 // buttons
 	
 .microbox-button
-.microbox-pager li
-	noselect()
-	border-radius $button
-	box-shadow inset 0 2px 2px 2px rgba(0,0,0,.2)
-	box-sizing border-box
-	color #ccc
-	cursor pointer
-	display block
-	font-size ($button - 10)
-	gradient rgba(0,0,0,.2), rgba(0,0,0,.4)
-	height $button
-	line-height $button
-	position absolute
-	text-align center
-	transition background .2s linear, color .2s linear
-	width $button
-	z-index 100
-
-	&:hover
-		color #eee
-		gradient rgba(0,0,0,.2), rgba(0,0,0,.3)
-	
-	&:active
-		gradient rgba(0,0,0,.3), rgba(0,0,0,.4)
+	button()
 
 // pager
 
@@ -116,8 +93,10 @@ $pager-active = darken($pager-hover, 8%)
 	bottom $button-margin
 	left $button-margin
 	position absolute
+	transition bottom .2s linear
 
 	li
+		button()
 		display inline-block
 		list-style none
 		margin-right 2px
