--- a/stylus/mixins.styl
+++ b/stylus/mixins.styl
@@ -39,6 +39,31 @@ transition-property()
 
 // custom
 
+button()
+	noselect()
+	border-radius $button
+	box-shadow inset 0 2px 2px 2px rgba(0,0,0,.2)
+	box-sizing border-box
+	color #ccc
+	cursor pointer
+	display block
+	font-size ($button - 10)
+	gradient rgba(0,0,0,.2), rgba(0,0,0,.4)
+	height $button
+	line-height $button
+	position absolute
+	text-align center
+	transition background .2s linear, color .2s linear
+	width $button
+	z-index 100
+
+	&:hover
+		color #eee
+		gradient rgba(0,0,0,.2), rgba(0,0,0,.3)
+	
+	&:active
+		gradient rgba(0,0,0,.3), rgba(0,0,0,.4)
+
 button-active()
 	border 2px solid rgba(255,255,255,.8)
 	color #fff
