--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 body {
-  background: #aaa;
+  background: #eee;
   font: 14px Helvetica, Arial, sans-serif;
   padding: 20px;
 }
@@ -16,7 +16,7 @@ li {
 li a {
   background: #999;
   display: inline-block;
-  padding: 10px;
+  margin: 10px 0 0 10px;
 }
 li a:hover {
   background: #888;
