--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -8,7 +8,7 @@
 // styles
 
 body
-	background #aaa
+	background #eee
 	font 14px Helvetica, Arial, sans-serif
 	padding 20px
 
@@ -20,7 +20,7 @@ li
 	a
 		background #999
 		display inline-block
-		padding 10px
+		margin 10px 0 0 10px
 
 		&:hover
 			background #888
