--- a/css/microbox.css
+++ b/css/microbox.css
@@ -41,6 +41,7 @@
   position: absolute;
 }
 .microbox img {
+  bottom: 0;
   -webkit-box-shadow: 0 0 3px rgba(0,0,0,0.2);
   -moz-box-shadow: 0 0 3px rgba(0,0,0,0.2);
   -ms-box-shadow: 0 0 3px rgba(0,0,0,0.2);
@@ -50,9 +51,13 @@
   display: none;
   image-rendering: optimizeQuality;
   -ms-interpolation-mode: bicubic;
-  margin-bottom: -3px;
+  left: 0;
+  margin: auto;
   max-height: 100%;
   max-width: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
   -ms-transition: all 0.2s linear;
@@ -60,7 +65,7 @@
   transition: all 0.2s linear;
 }
 .microbox img.visible {
-  display: inline-block;
+  display: block;
 }
 .microbox .inner {
   -webkit-box-shadow: 2px 2px 3px rgba(0,0,0,0.2);
